--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FuckYOU</title>
+    <title>Think it. Build it.</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Är så jävla trött jävla skit kuk liv</h1>
-    <p>Dö</p>
+    <div class="kontainer">
+        <h1>Think it. Build it.</h1>
+        <p class="intro">Raspberry Pi gives you the tools you need to make the tech you want, at a price you’ll like.
+        </p>
+
+        <div class="kolumner-3">
+            <div class="kolumn">
+                <img src="./bilder/Cluster-800x533.webp" alt="Raspberry Pi cluster">
+                <h2>How to build a Raspberry Pi cluster</h2>
+                <p>A Raspberry Pi cluster is a low-cost, versatile system you can use for all kinds of
+                    clustered-computing related technologies, and you have total control over the machines that
+                    constitute it.</p>
+                <a href="">Read more →</a>
+            </div>
+            <div class="kolumn">
+                <img src="./bilder/hotspor.webp" alt="Wi-Fi hotspot">
+                <h2>Host a Wi-Fi hotspot with a Raspberry Pi</h2>
+                <p>This Raspberry Pi-hosted Wi-Fi hotspot connects to a guest Wi-Fi network, then runs a separate
+                    private Wi-Fi network for all of your devices.</p>
+                <a href="">Read more →</a>
+            </div>
+            <div class="kolumn">
+                <img src="./bilder/pi-hole.webp" alt="Block ads at home with Pi-hole">
+                <h2>Block ads at home with Pi-hole</h2>
+                <p>A Raspberry Pi cluster is a low-cost, versatile system you can use for all kinds of
+                    clustered-computing related technologies, and you have total control over the machines that
+                    constitute it.</p>
+                <a href="">Read more →</a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
